Add lock screen with boilerplate

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".screen.form.FormActivity" />
+        <activity android:name=".screen.lock.LockActivity" />
     </application>
 
 </manifest>
