--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.18'
     implementation 'com.github.avito-tech:Konveyor:0.42.2'
     implementation 'com.github.rubensousa:bottomsheetbuilder:1.6.1'
+    implementation 'com.google.code.gson:gson:2.8.5'
     kapt 'com.google.dagger:dagger-compiler:2.13'
     kapt 'com.google.dagger:dagger-android-processor:2.16'
 }
