--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".screen.form.FormActivity" />
+        <activity android:name=".screen.info.InfoActivity" />
         <activity android:name=".screen.lock.LockActivity" />
     </application>
 
