--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':crypto')
     implementation project(path: ':androidsvg')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -51,5 +52,4 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     kapt 'com.google.dagger:dagger-compiler:2.13'
     kapt 'com.google.dagger:dagger-android-processor:2.16'
-    compile project(path: ':crypto')
 }
