--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".screen.form.FormActivity" />
         <activity android:name=".screen.info.InfoActivity" />
         <activity android:name=".screen.lock.LockActivity" />
+        <activity android:name=".screen.user.add.UserAddActivity" />
     </application>
 
 </manifest>
