--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,16 +25,37 @@
         <activity android:name=".screen.book.add.BookAddActivity" />
         <activity android:name=".screen.book.list.BookListActivity" />
         <activity android:name=".screen.book.importing.BookImportActivity">
-            <intent-filter>
+            <intent-filter
+                android:label="@string/app_name"
+                tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.EDIT" />
 
                 <category android:name="android.intent.category.DEFAULT" />
-                <data
-                    android:host="*"
-                    android:mimeType="application/nimpas-safe"
-                    android:pathPattern=".*\\.nmp"
-                    android:scheme="*" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:mimeType="*/*" />
+                <data android:pathPattern=".*\\.nmp" />
+                <data android:pathPattern=".*\\..*\\.nmp" />
+                <data android:pathPattern=".*\\..*\\..*\\.nmp" />
+                <data android:pathPattern=".*\\..*\\..*\\..*\\.nmp" />
+                <data android:pathPattern=".*\\..*\\..*\\..*\\..*\\.nmp" />
+                <data android:pathPattern=".*\\..*\\..*\\..*\\..*\\..*\\.nmp" />
+                <data android:pathPattern=".*\\..*\\..*\\..*\\..*\\..*\\..*\\.nmp" />
+                <data android:pathPattern=".*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\.nmp" />
+                <data android:pathPattern=".*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\.nmp" />
+                <data android:pathPattern=".*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\.nmp" />
+            </intent-filter>
+            <intent-filter
+                android:label="@string/app_name"
+                tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.EDIT" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:mimeType="application/nimpas-safe" />
             </intent-filter>
         </activity>
 
