--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <activity android:name=".screen.book.list.BookListActivity" />
         <activity android:name=".screen.book.importing.BookImportActivity">
             <intent-filter
-                android:label="@string/app_name"
+                android:label="@string/import_book"
                 tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.EDIT" />
@@ -47,7 +47,7 @@
                 <data android:pathPattern=".*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\.nmp" />
             </intent-filter>
             <intent-filter
-                android:label="@string/app_name"
+                android:label="@string/import_book"
                 tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.EDIT" />
