--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
@@ -13,11 +12,11 @@ android {
         }
     }
 
-    compileSdkVersion 30
+    compileSdkVersion 32
     defaultConfig {
         applicationId "com.tomclaw.nimpas"
         minSdkVersion 16
-        targetSdkVersion 30
+        targetSdkVersion 32
         versionCode project.hasProperty("versionCode") ? Integer.parseInt(project.versionCode) : 1
         versionName "1.0"
     }
@@ -38,18 +37,18 @@ android {
 dependencies {
     implementation project(path: ':crypto')
     implementation 'com.caverock:androidsvg-aar:1.4'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.0'
+    implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
     implementation 'com.github.avito-tech:Konveyor:0.42.2'
-    implementation 'com.github.rubensousa:bottomsheetbuilder:1.6.1'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.google.dagger:dagger:2.23.2'
-    kapt 'com.google.dagger:dagger-compiler:2.23.2'
-    kapt 'com.google.dagger:dagger-android-processor:2.23.2'
+    implementation 'com.github.rubensousa:BottomSheetBuilder:1.6.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.dagger:dagger:2.42'
+    kapt 'com.google.dagger:dagger-compiler:2.42'
+    kapt 'com.google.dagger:dagger-android-processor:2.42'
 }
