--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 
 dependencies {
     implementation project(path: ':crypto')
+    implementation project(path: ':breadcrumbs')
     implementation 'com.caverock:androidsvg-aar:1.4'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.4.2'
