--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,13 +12,14 @@ android {
         }
     }
 
-    compileSdkVersion 32
+    compileSdkVersion 33
     defaultConfig {
         applicationId "com.tomclaw.nimpas"
         minSdkVersion 16
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode project.hasProperty("versionCode") ? Integer.parseInt(project.versionCode) : 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -32,6 +33,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.tomclaw.nimpas'
 }
 
 dependencies {
@@ -39,17 +41,17 @@ dependencies {
     implementation project(path: ':breadcrumbs')
     implementation 'com.caverock:androidsvg-aar:1.4'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
     implementation 'com.github.avito-tech:Konveyor:0.42.2'
     implementation 'com.github.rubensousa:BottomSheetBuilder:1.6.0'
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.google.dagger:dagger:2.42'
     kapt 'com.google.dagger:dagger-compiler:2.42'
-    kapt 'com.google.dagger:dagger-android-processor:2.42'
+    kapt 'org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.5.0'
 }
