--- a/breadcrumbs/src/main/AndroidManifest.xml
+++ b/breadcrumbs/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="moe.feng.common.view.breadcrumbs" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" />
