--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,10 +12,10 @@ android {
         }
     }
 
-    compileSdkVersion 33
+    compileSdk 34
     defaultConfig {
         applicationId "com.tomclaw.nimpas"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 33
         versionCode project.hasProperty("versionCode") ? Integer.parseInt(project.versionCode) : 1
         versionName "1.1"
@@ -41,7 +41,7 @@ dependencies {
     implementation project(path: ':breadcrumbs')
     implementation 'com.caverock:androidsvg-aar:1.4'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
